<resources>
    <string name="app_name">Rooster</string>
    <string name="app_name_beta">Rooster Beta</string>
    <string name="action_settings">Settings</string>
    <string name="action_profile">Profile</string>
    <string name="action_signout">Sign out</string>
    <string name="action_signin">Sign in</string>
    <string name="onboarding_hook">An alarm that is your friend, not foe.</string>
    <string name="onboarding_hook_button">Find out how</string>
    <string name="onboarding_image_transition">onboarding_image_transition</string>
    <string name="onboarding_sign_up_benefits">Sync your alarms and help us suggest\nthe best channels for you by creating a profile</string>
    <string name="onboarding_in_app_sign_up_benefits">You need a profile to have friends</string>
    <string name="onboarding_in_profile_sign_up_benefits">Let\'s create a profile</string>
    <string name="onboarding_social_hook_1">You can also&#8230;</string>
    <string name="onboarding_social_hook_2">Wake up to voice notes\nfrom friends and family</string>
    <string name="onboarding_sounds_cool">Sounds cool</string>
    <string name="onboarding_try_later">Try later</string>
    <string name="onboarding_social_vibe">Rooster is about\nspreading the love</string>
    <string name="onboarding_got_it">Got it</string>
    <string name="onboarding_number_entry_benefits">Your friends can\'t find you\nwithout your number</string>
    <string name="intro_screen1_blurb">Wake up to surprise voice notes from your friends.</string>
    <string name="intro_screen2_blurb">Choose channel roosters for daily inspiration, jokes, music, and more!</string>
    <string name="intro_screen3_blurb">We need your number so that we can help you find your friends</string>
    <string name="intro_get_started">Let’s do this</string>
    <string name="intro_mobile_hint">Mobile number</string>
    <string name="terms_and_conditions">Terms and conditions</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="neutral">Okay</string>
    <string name="take_to_settings">Go to settings</string>
    <string name="later">Later</string>
    <string name="already_signed_in">You are already signed in</string>
    <string name="sign_out">Sign out</string>
    <string name="signup_facebook">Continue with Facebook</string>
    <string name="signup_google">Continue with Google</string>
    <string name="signup_not_now">Not now</string>
    <string name="signup_cancel">Cancel</string>
    <string name="signup_email">Sign up with Email</string>
    <string name="signup_auth_failed">Authentication failed. Please try again.</string>
    <string name="email_address">Email address</string>
    <string name="phone_number">Phone number</string>
    <string name="name">Name</string>
    <string name="password">Password: 6+ alpha &amp; numeric</string>
    <string name="next">Next</string>
    <string name="submit">Submit</string>
    <string name="send">Send</string>
    <string name="alarm_12_hour_am">AM</string>
    <string name="alarm_12_hour_pm">PM</string>
    <string name="my_alarms">My Alarms</string>
    <string name="create_alarm">Create Alarm</string>
    <string name="edit_alarm">Edit Alarm</string>
    <string name="new_alarm_set_time">Please select alarm time!</string>
    <string name="alarm_dismiss">Dismiss</string>
    <string name="alarm_default_name">Rise and Shine!</string>
    <string name="alarm_count"></string>
    <string name="delete_alarm">Delete alarm</string>
    <string name="save_alarm">Save alarm</string>
    <string name="repeat_alarm">Repeat alarm time</string>
    <string name="allow_friends">Allow friends to send roosters to this alarm</string>
    <string name="discover">Explore</string>
    <string name="friends">Friends</string>
    <string name="text_name_initials"></string>
    <string name="text_friends_button_add">Add</string>
    <string name="text_friends_button_invite">Invite</string>
    <string name="text_friends_button_accept">Accept</string>
    <string name="share_button">Share Rooster</string>
    <string name="add_contacts">Add contacts who have Rooster</string>
    <string name="invite_contacts">Invite contacts to Rooster</string>
    <string name="search_title">Search…</string>
    <string name="shuffle_title">Shuffle</string>
    <string name="search_hint_friends">Search…</string>
    <string name="retrieve_contacts_permission">We need your permission to retrieve addable contacts, click me or swipe to try again.</string>
    <string name="select_all_button">Select all friends</string>
    <string name="message_status_activity_title">Roosters</string>
    <string name="status_sent">Sent</string>
    <string name="status_delivered">Delivered</string>
    <string name="status_awake">Awake</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="new_audio_at_least_one_friend">Please select at least 1 friend.</string>
    <string name="new_audio_instructions">Record something funny, \n moving, kind or pointless \n to surprise your friends.</string>
    <string name="new_audio_time_instructions">Keep recording, \n your friends need to hear you!</string>
    <string name="new_audio_post_delete_instructions">If at first you don’t succeed, \n skydiving is not for you.</string>
    <string name="new_audio_time_amplitude_instructions">Keep recording and speak up, \n your friends need to hear you!</string>
    <string name="new_audio_continue_instructions">Time to continue and select some friends!</string>
    <string name="new_audio_quiet_instructions">Psst! That was very quiet, \n please record again…</string>
    <string name="ok">OK</string>
    <string name="save">Save</string>
    <string name="channel_prompt_1">Pick an eye-opening channel to wake up to</string>
    <string name="channel_prompt_2">Or just hit \"Save\" to proceed without one</string>
    <string name="settings_activity_title">Settings</string>
    <string name="dialog_confirm_changes">The alarm has not been set, are you sure you wish to discard changes?</string>
    <string name="dialog_confirm_alarm_delete">Are you sure you wish to delete this alarm?</string>
    <string name="dialog_confirm_friend_delete">Are you sure you wish to remove this friend?</string>
    <string name="dialog_confirm_social_rooster_unfavourite">Are you sure you wish to remove the love?</string>
    <string name="dialog_background_settings_1">Your&#160;</string>
    <string name="dialog_background_settings_2">&#160;phone needs to give Rooster permission to wake you up.\n\nGo to settings to add Rooster to the protected list.\n\n</string>
    <string name="dialog_background_settings_sony_1">If your&#160;</string>
    <string name="dialog_background_settings_sony_2">&#160;phone has STAMINA mode enabled, you will: \n\n1) Have to wait for your channel content to download before closing the app. \n2) Not receive roosters from your friends.</string>
    <string name="dialog_background_settings_xiaomi_1">Your&#160;</string>
    <string name="dialog_background_settings_xiaomi_2">&#160;phone may need to give Rooster permission to wake you up.\n\nGo to \'Settings\'>\'Permissions\' and enable \'Autostart\' for Rooster.\n\n</string>
    <string name="dialog_background_settings_zte_1">Your&#160;</string>
    <string name="dialog_background_settings_zte_2">&#160;phone may need to give Rooster permission to wake you up on time.\n\nGo to \'Settings\'>\'Power Manager\'>\'Power management for apps\' and disable power saving for Rooster.\n\n</string>
    <string name="invite_to_rooster_message">How cool would it be if you could wake up to surprise voice notes from me and other friends? \n\nYou can also wake up to different content channels such as inspiration, comedy, music, news, meditation, bird calls and more! \n\nLike the best things in life, it’s free :) \nhttp://www.onelink.to/awesome_mornings</string>
    <string name="share_rooster_message">Hey! Do you know if there’s another word for synonym? Or why it\'s called a boxing ring if it\'s actually a square? Where is Old Zealand? What’s the best way to wake up? I only know the answer to the last question, check out this awesome alarm:\n\nRooster wakes you up with a different kind of OOMPH! every day with inspiration, music, comedy etc. How cool would it be to wake up to surprise voice notes from friends as your alarm? Super cool, obviously. Rooster does that too! You can try it out here, or don’t ;)\n\nhttp://onelink.to/awesome_mornings\n\nOh and if you need some comic relief, watch their advert:\n\nwww.youtube.com/watch?v=1rphGpU9IZA&amp;t=4s</string>
    <string-array name="user_settings_day_night_theme_entries">
        <item>Automatically set by timezone</item>
        <item>Day theme (light)</item>
        <item>Night theme (dark)</item>
    </string-array>
    <string-array name="user_settings_day_night_theme_entry_values">
        <item>USER_SETTINGS_DAY_NIGHT_THEME_AUTOMATIC</item>
        <item>USER_SETTINGS_DAY_THEME</item>
        <item>USER_SETTINGS_NIGHT_THEME</item>
    </string-array>
    <string-array name="user_settings_day_night_theme_default_values">
        <item>USER_SETTINGS_DAY_NIGHT_THEME_AUTOMATIC</item>
    </string-array>
    <string-array name="user_settings_alarm_volume_entries">
        <item>Disabled</item>
        <item>20%</item>
        <item>40%</item>
        <item>60%</item>
        <item>80%</item>
        <item>100%</item>
    </string-array>
    <string-array name="user_settings_alarm_volume_entry_values">
        <item>USER_SETTINGS_ALARM_VOLUME_INACTIVE</item>
        <item>USER_SETTINGS_ALARM_VOLUME_20</item>
        <item>USER_SETTINGS_ALARM_VOLUME_40</item>
        <item>USER_SETTINGS_ALARM_VOLUME_60</item>
        <item>USER_SETTINGS_ALARM_VOLUME_80</item>
        <item>USER_SETTINGS_ALARM_VOLUME_100</item>
    </string-array>
    <string-array name="user_settings_alarm_volume_default_values">
        <item>USER_SETTINGS_ALARM_VOLUME_40</item>
    </string-array>
</resources>