<?xml version="1.0" encoding="utf-8"?><!--
  ~ Rooster Mornings Android.
  ~ Copyright (c)  2017 Roosta Media. All rights reserved.
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/rooster_splash"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".activity.SignupEmailActivity">

    <ImageView
        android:id="@+id/rooster_logo"
        android:maxHeight="200dp"
        android:minHeight="50dp"
        android:minWidth="50dp"
        android:maxWidth="200dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:layout_marginRight="100dp"
        android:layout_marginLeft="100dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:src="@drawable/logo" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rooster_logo"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <EditText
            android:id="@+id/signup_username_edittext"
            style="@style/RoosterEditText"
            android:layout_width="@dimen/input_width_large"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_xxlarge"
            android:gravity="center"
            android:hint="@string/name" />

        <EditText
            android:id="@+id/signup_email_address_edittext"
            style="@style/RoosterEditText"
            android:layout_width="@dimen/input_width_large"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_large"
            android:gravity="center"
            android:hint="@string/email_address"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/signup_password_edittext"
            style="@style/RoosterEditText"
            android:layout_width="@dimen/input_width_large"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_large"
            android:gravity="center"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/signup_button_email"
            style="@style/RoosterButtonStyle"
            android:layout_width="@dimen/input_width_large"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/spacing_xlarge"
            android:layout_marginTop="@dimen/spacing_xlarge"
            android:text="@string/submit">

            <requestFocus />
        </Button>

    </LinearLayout>

</RelativeLayout>
