<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_device_alarm_full_screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_background_layer_list"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.roostermornings.android.activity.DeviceAlarmFullScreenActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:keepScreenOn="true">


        <ImageView
            android:id="@+id/alarm_sender_pic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/spacing_xxlarge"
            android:layout_marginTop="@dimen/spacing_xxxlarge"
            android:background="@drawable/alarm_profile_pic_circle" />

        <TextView
            android:id="@+id/alarm_sender_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/spacing_xlarge"
            android:gravity="center"
            android:text="@string/alarm_default_name"
            android:textColor="@color/white"
            android:textSize="@dimen/text_xxlarge" />

        <TextView
            android:id="@+id/alarm_count"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/spacing_xlarge"
            android:gravity="center"
            android:text="@string/alarm_count"
            android:textColor="@color/white"
            android:textSize="@dimen/text_xlarge" />


        <Button
            android:id="@+id/alarm_snooze_button"
            style="@style/RoosterButtonLightBlueStyle"
            android:layout_width="135dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="@dimen/spacing_normal"
            android:text="Snooze"></Button>

    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/alarm_dismiss"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/spacing_large"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:text="@string/alarm_dismiss"
            android:textColor="@color/white"
            android:textSize="@dimen/text_xxlarge" />

    </LinearLayout>

</RelativeLayout>
