<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@color/themePrimary">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/logo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="@dimen/spacing_xxlarge"
                android:text="@string/intro_screen3_blurb"
                android:textColor="@android:color/white"
                android:textSize="@dimen/intro_slide_title"
                android:textStyle="bold" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:inputType="phone"
                style="@style/RoosterEditText"
                android:hint="@string/intro_mobile_hint"
                android:id="@+id/intro_mobile_number_edit_text"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:orientation="vertical">

                <Button android:id="@+id/post_registration_intro_next_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/next"
                    android:layout_gravity="center_horizontal"
                    style="@style/RoosterButtonStyle"/>


            <!--<LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <view
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:layout_marginRight="@dimen/spacing_small"
                    android:background="@drawable/small_circle_white" />

                <view
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:layout_marginRight="@dimen/spacing_small"
                    android:background="@drawable/small_circle_blue" />

                <view
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:background="@drawable/small_circle_blue" />

            </LinearLayout>-->


        </LinearLayout>


    </RelativeLayout>


</ScrollView>


