<?xml version="1.0" encoding="utf-8"?><!--
  ~ Rooster Mornings Android.
  ~ Copyright (c)  2017 Roosta Media. All rights reserved.
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/rooster_light_blue"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".activity.SignInActivity">

    <ImageView
        android:id="@+id/rooster_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:src="@drawable/logo" />

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rooster_logo"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="@dimen/spacing_xxlarge"
        android:gravity="center_horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!--This button is necessary to override the default Facebook login button-->
            <com.facebook.login.widget.LoginButton
                android:id="@+id/login_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="30dp"
                android:layout_marginTop="30dp"
                android:visibility="gone" />

            <Button
                android:id="@+id/signin_button_facebook"
                style="@style/RoosterButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/spacing_normal"
                android:drawableLeft="@drawable/com_facebook_button_login_logo"
                android:drawablePadding="@dimen/spacing_normal"
                android:paddingLeft="@dimen/spacing_normal_large"
                android:paddingRight="@dimen/spacing_normal_large"
                android:text="@string/signup_facebook" />

            <Button
                android:id="@+id/signin_button_google"
                style="@style/RoosterButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/spacing_normal"
                android:layout_marginTop="@dimen/spacing_normal"
                android:drawableLeft="@drawable/googleg_standard_color_18"
                android:drawablePadding="@dimen/spacing_normal"
                android:paddingLeft="@dimen/spacing_normal_large"
                android:paddingRight="@dimen/spacing_normal_large"
                android:text="@string/signup_google"></Button>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/already_user_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/spacing_xlarge"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="center"
                    android:text="Login"
                    android:textColor="@drawable/rooster_link_white" />

                <TextView
                    android:id="@+id/sign_up_email_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/spacing_xlarge"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="center"
                    android:text="Sign Up With Email"
                    android:textColor="@drawable/rooster_link_white" />

            </LinearLayout>

        </LinearLayout>

        <ProgressBar
            android:id="@+id/progressBar"
            style="@style/Widget.AppCompat.ProgressBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone" />

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/terms_and_conditions_link"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacing_xlarge"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center|bottom"
            android:text="@string/terms_and_conditions"
            android:textColor="@drawable/rooster_link_white" />

    </LinearLayout>

</RelativeLayout>
